# navi-fractal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  scorecard.yml  semgrep.yml
docs/: index.md
docs/design/: navi-fractal-design-v2.md
docs/explanation/: calibration-regime.md  how-it-works.md  quality-gates.md  theory-bridge.md
docs/getting-started/: installation.md  interpreting-results.md  quickstart.md
docs/how-to/: bring-your-own-graph.md  run-calibration.md  tune-quality-gates.md
docs/plans/: 2026-03-01-scaffold-fixes-plan.md  2026-03-01-scaffold-refactoring-design.md  2026-03-01-scaffold-refactoring-plan.md  2026-03-01-v4-alignment-design.md  2026-03-01-v4-alignment-plan.md  2026-03-02-calibration-instrument-design.md  2026-03-02-calibration-instrument-plan.md  2026-03-02-v4-smoke-test-design.md  2026-03-02-v4-smoke-test-plan.md  2026-03-07-calibration-regime.md  v4-alignment-brain-dump.md
docs/reference/: api.md  changelog.md  fractal-reference-research.md  fractal_analysis_v4_mfa.py  reason-codes.md
docs/stylesheets/: navi.css
scripts/: calibrate.py  calibration-report.json  convergence_analysis.py
src/navi_fractal/: __init__.py  _bfs.py  _graph.py  _helpers.py  _null_model.py  _quality_gate.py  _radii.py  _regression.py  _sandbox.py  _types.py
tests/: conftest.py  test_benchmark.py  test_bfs.py  test_determinism.py  test_graph.py  test_helpers.py  test_known_dimensions.py  test_moment_helpers.py  test_null_model.py  test_quality_gates.py  test_radii.py  test_regression.py  test_sandbox.py  test_types.py
tests/v4_smoke/: __init__.py  conftest.py  test_flower_integration.py  test_math_primitives.py  test_plausibility.py
